[package]
name = "polkadot-du"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/ggwpez/pdu"
description = "PDU - Polkadot runtime storage analyzer"

[[bin]]
name = "pdu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.87"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
hex = "0.4.3"
indicatif = "0.17.8"
itertools = "0.13.0"
log = "0.4.22"
parity-scale-codec = "3.6.12"
serde_json = "1.0.128"
sp-crypto-hashing = "0.1.0"
subxt = "0.37.0"
subxt-metadata = "0.37.0"
tokio = { version = "1.40.0", features = ["full", "sync"] }
termtree = "0.5.1"
ansi_term = "0.12"
num_cpus = "1.16.0"

frame-remote-externalities = { version = "*", optional = true }
sp-runtime = { version = "*", optional = true }
sp-io = { version = "*", optional = true }
frame-support = { version = "*", optional = true }

[features]
chainspec = ["frame-remote-externalities", "sp-runtime", "sp-io", "frame-support"]
