[package]
name = "polkadot-du"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/ggwpez/pdu"
description = "PDU - Polkadot runtime storage analyzer"

[[bin]]
name = "pdu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
hex = "0.4.3"
indicatif = "0.17.9"
itertools = "0.14.0"
log = "0.4.22"
parity-scale-codec = "3.6.12"
serde_json = "1.0.135"
sp-crypto-hashing = "0.1.0"
subxt = "0.38.0"
subxt-metadata = "0.38.0"
tokio = { version = "1.43.0", features = ["full", "sync"] }
termtree = "0.5.1"
ansi_term = "0.12"
num_cpus = "1.16.0"

scale-compressed = { path = "scale-compressed" }
frame-remote-externalities = { version = "0.46.0" }
sp-runtime = { version = "39.0.1" }
sp-io = { version = "38.0.0" }
frame-support = { version = "38.0.0" }
serde = { version = "1.0.217", features = ["derive"] }
sp-application-crypto = "38.0.0"
