[package]
name = "scale-compressed"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0 OR Apache-2.0"
repository = "https://github.com/ggwpez/pdu"
description = "Compress SCALE encoded data"
readme = "README.md"

[dependencies]
miniz_oxide = "0.8"
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.11", default-features = false, optional = true }

[features]
std = []
